@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 31-07-2005 fixed: [ 1245983 ] id3 cover art with a picture type outside the id3 specs is not read
  - 30-07-2005 changed: file deletion from the media windows now use the filemanager (so recursive delete works)
  - 30-07-2005 fixed: Original zoom mode was incorrect.
  - 30-07-2005 added: to mplayer.conf, cache prefill (%), before playback starts.
